<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/explorer_back"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/explorer_back" />
    </LinearLayout>

    <ListView
        android:id="@+id/explorer_listview"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/explorer_refresh"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/explorer_refresh" />
        <Button
            android:id="@+id/explorer_download"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/explorer_download" />
        <Button
            android:id="@+id/explorer_upload"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/explorer_upload" />
        <Button
            android:id="@+id/explorer_tasks"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/explorer_tasks" />
    </LinearLayout>

</LinearLayout>