
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
        
        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
             android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_name" />

            <EditText
                android:id="@+id/profile_name_tx"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small"
                android:layout_weight="1">
            </EditText>

         

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
             android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_host" />

            <EditText
                android:id="@+id/profile_host_tx"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small"
                android:layout_weight="3">
            </EditText>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_port" />

            <EditText
                android:id="@+id/profile_port_tx"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small"
                android:layout_weight="1" 
                android:inputType="number">
            </EditText>

        </LinearLayout>

          <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
             android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_user" />

            <EditText
                android:id="@+id/profile_user_tx"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small"
                android:hint="@string/profile_user_hint"
                android:layout_weight="1">
            </EditText>

          

        </LinearLayout>

  <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
             android:orientation="horizontal" >

           

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_pwd" />

            <EditText
                android:id="@+id/profile_pwd_tx"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small"
                android:layout_weight="1" >
            </EditText>

        </LinearLayout>
          
    </LinearLayout>
